# ChangeLog for media-video/vdr
# Copyright 2003 Martin Hierling; Distributed under the GPL
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/vdr/ChangeLog,v 1.9 2003/04/03 20:32:04 fow0ryl Exp $

*vdr-1.1.26 (19 Mar 2003)
  03 Apr 2003; H.Ryll <henning.ryll@web.de> rc.vdr-1.1.26
  handling of _EXTRAOPTS fixed
  
  03 Apr 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.26.ebuild
  added support for the irexec programm to restart vdr with a 
  userdefined key (edit /etc/vdr/irexec.conf and start irexec)

  19 Mar 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.26.ebuild
  new vdr version, some fixes to install all config files
  new download location (cadsoft instead of linuxtv)

*vdr-1.1.25-r3 (15 Mar 2003)
  15 Mar 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.25-r3.ebuild
  added use variable for VFAT (USE="vdr_vfat")
  added use variable for Elchi AIO (USE="vdr_elchi")
  The supplied Elchi 1.1.25 patch is nothing new, it is the
  1.1.20 patch but packed new to be applied without the nasty
  ofset warnings

*vdr-1.1.25-r2 (14 Mar 2003)
  14 Mar 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.25-r2.ebuild
  added a watchdog daemon script and the appropriate init script

*vdr-1.1.25-r1 (24 Feb 2003)
  27 Feb 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.25-r1.ebuild
  now using dvb rc.script for loading modules

  24 Feb 2003; M.Hierling <mad@cc.fh-lippe.de> dr-1.1.25-r1.ebuild
  adapted to the new location from the dvb header files

*vdr-1.1.25 (17 Feb 2003)
  18 Feb 2003; M.Hierling <mad@cc.fh-lippe.de> rc-1.1.25
  added some info messages

  17 Feb 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.25.ebuild
  new version, nothing new ... 
  fixed typo in rc script

*vdr-1.1.24 (13 Feb 2003)

  17 Feb 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.24.ebuild
  fixed typo in rc script

  14 Feb 2003; M.Hierling <mad@cc.fh-lippe.de> ChangeLog :

  Added initial ChangeLog which should be updated whenever the package is