@@ -1,8 +1,11 @@
 # ChangeLog for media-video/vdr
 # Copyright 2003 Martin Hierling; Distributed under the GPL
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/vdr/ChangeLog,v 1.9 2003/04/03 20:32:04 fow0ryl Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/vdr/ChangeLog,v 1.10 2003/04/11 17:22:53 mad Exp $
 
 *vdr-1.1.26 (19 Mar 2003)
+  04 Apr 2003; M.Hierling <mad@cc.fh-lippe.de> vdr-1.1.26.ebuild
+  added the libs to the installation (needed by some dvb tools)
+
   03 Apr 2003; H.Ryll <henning.ryll@web.de> rc.vdr-1.1.26
   handling of _EXTRAOPTS fixed
   
